--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.553.0",
+    "mongodb": "^7.0.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "resend": "^6.4.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
